# Flexpart-Container-Pipeline

./: README.md  pyproject.toml
docker/flex_extract/: Dockerfile.convert2
docker/flexpart/: Dockerfile.arm64
docs/: USAGE.md
scripts/: build_images.sh  plot_nc.py
src/flexpart_app/: cli.py  config.py
src/flexpart_app/services/: docker_runner.py  flex_extract.py  input_builder.py  meteo.py  result_validator.py  simulation_runner.py
